welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: ';' expected but 'def' found.
		if(estSurBiscuit) {x=x+1}}def haveBaggle():Boolean = {
                                          ^