welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var x=0
		if(estSurBiscuit) {x=x+1}}def haveBaggle():Boolean = {

	def vuBiscuit():Boolean = {
		

		if(x=1) {return true} else {return false}
		
	
	
	if (vuBiscuit()==true) {return true} else {return false}
	
}
